# amazon-s3-encryption-client-python

./: .gitignore  .gitmodules  .releaserc.cjs  Makefile  NOTICE  README.md  SUPPORT_POLICY.rst  TEST_MATRIX.md  TEST_MATRIX_EVALUATION.md  pyproject.toml  requirements.txt  spec.md
.duvet/: config.toml
.github/workflows/: all-ci.yml  daily_ci.yml  duvet-test-server.yml  duvet.yml  examples.yml  lint.yml  main.yml  python-integ.yml  python-perf.yml  release.yml  test-server.yml  test-submodules.yml  test.yml
all-examples/: Makefile  README.md
all-examples/cpp/: CMakeLists.txt  Makefile  README.md  main.cpp
all-examples/cpp/v3/: CMakeLists.txt  Makefile  README.md  main.cpp
all-examples/dotnet/v2/: S3EncryptionExample.csproj
all-examples/dotnet/v3/: S3EncryptionExample.csproj
all-examples/dotnet/v4/: S3EncryptionExample.csproj
all-examples/go/v3/: Makefile  README.md  go.mod  local-go-s3ec  main.go
all-examples/go/v4/: Makefile  README.md  go.mod  local-go-s3ec  main.go
all-examples/java/v3/: Makefile  README.md  build.gradle.kts  s3ec-staging  settings.gradle.kts
all-examples/java/v4/: .gitignore  Makefile  README.md  build.gradle.kts  s3ec-staging  settings.gradle.kts
all-examples/net/: .gitignore
all-examples/net/migration/: Makefile  MigrationStep0.cs  MigrationStep0Test.cs  MigrationStep1.cs  MigrationStep1Test.cs  MigrationStep2.cs  MigrationStep2Test.cs  TestUtils.cs  (+3 more)
cdk/: package-lock.json  package.json
cdk/lib/: cdk-stack.ts
compliance_exceptions/: decryption_exceptions.md  encryption_exceptions.md  key_commitment_exceptions.md  kms_keyring_exceptions.md
docs/: api.rst  conf.py  index.rst
examples/src/: delayed_auth_streaming_example.py  instruction_file_example.py  kms_keyring_put_get_example.py  legacy_decrypt_example.py
examples/test/: test_i_delayed_auth_streaming_example.py  test_i_instruction_file_example.py  test_i_kms_keyring_put_get_example.py  test_i_legacy_decrypt_example.py
hard-submodules/amazon-s3-encryption-client-go/: README.md
release-validation/: validate.py
src/s3_encryption/: __init__.py  _utils.py  buffered_decrypt.py  decryptor.py  exceptions.py  instruction_file.py  instruction_file_config.py  key_derivation.py  metadata.py  pipelines.py  stream.py
test/: test_decryption.py  test_decryption_materials.py  test_decryption_materials_integration.py  test_default_algorithm_commitment.py  test_encryption.py  test_encryption_materials.py  test_encryption_materials_integration.py  test_exceptions.py  test_instruction_file_config.py  test_key_commitment.py  test_key_commitment_encrypt.py  test_key_derivation.py  test_kms_keyring.py  test_metadata.py  test_multipart.py  test_on_get_object_after_call.py  test_pipelines.py  test_s3_encryption_client.py  test_s3_encryption_client_delete.py  test_s3_encryption_client_delete_objects.py  test_s3_encryption_client_plugin.py  test_stream.py  test_user_agent.py
test-server/: Makefile  OPTIMIZATION.md  README.md  cookies.txt  generate_compliance_dashboard.py  generate_homepage.py  generate_html_from_snapshot.py  gradle.init
test-server/cpp-v2-server/: CMakeLists.txt  Makefile  README.md  main.cpp
test-server/cpp-v2-server/.duvet/: config.toml  snapshot.txt
test-server/cpp-v2-transition-server/: Makefile  compliance.txt  main.cpp
test-server/cpp-v3-server/: CMakeLists.txt  Makefile  README.md  compliance.txt  main.cpp
test-server/go-server/: .gitignore  Makefile  README.md  main.go
test-server/go-v3-server/: Makefile  README.md  go.mod  go.sum  main.go
test-server/go-v3-transition-server/: Makefile  README.md  go.mod  main.go
test-server/go-v4-server/: Makefile  README.md  go.mod  go.sum  main.go
test-server/java-server/: README.md  build.gradle.kts  settings.gradle.kts
test-server/java-tests/: README.md  build.gradle.kts  settings.gradle.kts  smithy-build.json
test-server/java-v3-server/: Makefile  README.md  build.gradle.kts  gradle.properties
test-server/java-v3-transition-server/: Makefile  README.md  build.gradle.kts  smithy-build.json
test-server/java-v4-server/: Makefile  README.md  build.gradle.kts  gradle.properties
test-server/model/: client.smithy  main.smithy  object.smithy
test-server/net-v2-transition-server/: Makefile  NetV2TransitionServer.csproj  Program.cs  README.md
test-server/net-v2-v3-server/: Makefile  NetV2V3Server.csproj  Program.cs  README.md
test-server/net-v3-server/: .gitignore  NetV3Server.csproj  NetV3Server.sln
test-server/net-v3-transition-server/: Makefile  NetV3TransitionServer.csproj  Program.cs  README.md
test-server/net-v4-improved-server/: Makefile  NetV4ImprovedServer.csproj  Program.cs  README.md  net-v4-improved-server-backup.sln
test-server/net-v4-server/: Makefile  NetV4Server.csproj  Program.cs  README.md
test-server/php-v2-server/: .gitignore  Makefile  README.md  composer.json  cookies.txt
test-server/php-v2-transition-server/: Makefile  composer.json  local-php-sdk~fireegg-test-servers
test-server/php-v3-server/: Makefile  README.md  composer.json
test-server/python-server/: .gitignore  README.md  pyproject.toml
test-server/python-server/src/: __init__.py  main.py
test-server/python-v3-server/: Makefile
test-server/python-v4-server/: Makefile  pyproject.toml
test-server/ruby-v2-server/: Gemfile  Makefile  README.md  app.rb
test-server/ruby-v3-server/: .gitignore  Makefile  README.md  app.rb  config.ru
test-server/spec-compliance-dashboard/: .gitignore  compliance_homepage.html  generate_compliance_dashboard.py
test-server/templates/: homepage_styles.css  report_template.html  styles.css
test/integration/: test_i_custom_keyring_cmm.py  test_i_key_commitment_policy.py  test_i_mrk_cross_region.py  test_i_ranged_get.py  test_i_s3_encryption.py  test_i_s3_encryption_delete_objects.py  test_i_s3_encryption_instruction_file.py  test_i_s3_encryption_multipart.py  test_i_s3_encryption_multithreaded.py  test_i_s3_encryption_streaming.py  test_i_s3_encryption_transfer_manager.py  test_i_security.py
test/performance/: conftest.py  generate_report.py  test_perf_s3_encryption.py
(+245 files in other folders)
