[project]
name = "amazon-s3-encryption-client-python"
version = "0.1.0"
description = "This library provides an S3 client that supports client-side encryption."
authors = [
    {name = "AWS Crypto Tools", email = "aws-crypto-tools@amazon.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.37.2",
    "cryptography>=45.0.6",
    "attrs>=25.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.1",
]
dev = [
    "black>=24.3.0,<27.0.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/s3_encryption"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".git", "__pycache__", "build", "dist"]

[tool.ruff.lint]
# Enable all rules by default, then configure specific rule settings below
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "A", "C4", "PT", "RET", "SIM", "ARG", "ERA"]
ignore = ["ARG002"]  # Allow unused method arguments (e.g., **kwargs for API compatibility)

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["s3_encryption"]

[tool.ruff.lint.per-file-ignores]
"test/**/*.py" = ["D100", "D101", "D102", "D103", "D104", "E501"]
