[project]
name = "amazon-s3-encryption-client-python"
version = "3.0.0"
description = "This library provides an S3 client that supports client-side encryption."
authors = [
    {name = "AWS Crypto Tools", email = "aws-crypto-tools@amazon.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.43.6,<2",
    "cryptography>=48.0.0,<49",
    "attrs>=26.1.0,<27",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
dev = [
    "ruff>=0.15.12",
    "boto3-stubs~=1.43.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/s3_encryption"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".git", "__pycache__", "build", "dist"]

[tool.ruff.lint]
# Enable all rules by default, then configure specific rule settings below
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "A", "C4", "PT", "RET", "SIM", "ARG", "ERA"]
ignore = [
    "ARG002",  # Allow unused method arguments (e.g., **kwargs for API compatibility)
    "E501",    # Line too long - Duvet annotations require long specification paths
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["s3_encryption"]

[tool.ruff.lint.per-file-ignores]
"test/**/*.py" = ["D100", "D101", "D102", "D103", "D104", "E501"]
"src/s3_encryption/pipelines.py" = ["E501"]

[tool.coverage.run]
source = ["src/s3_encryption"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
markers = [
    "examples: S3 Encryption Client example tests",
]
