[project]
name = "python-server"
version = "0.1.0"
description = "A Python server implementation"
authors = [
    {name = "Your Name"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.37.2",
    "pytest>=8.4.1,<9.0.0",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=6.1.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
